--- a/frontend/index.css
+++ b/frontend/index.css
@@ -51,3 +51,33 @@ button {
 button:hover {
     background-color: rgba(255,255,255,0.1);
 }
+
+input::placeholder {
+    color: #303030;
+    text-align: center;
+}
+
+h6 {
+    font-size: 14px;
+    color: lightgoldenrodyellow;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 13px;
+    margin: 5px;
+}
+
+.inputContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px;
+}
