--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,5 +1,7 @@
 html {
     background-color: #303030;
+    width: 100%;
+    height: 100%;
 }
 
 .app {
@@ -7,6 +9,13 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.App, #root {
+    width: 100%;
+    height: 100%;
 }
   
 .header {
@@ -26,8 +35,8 @@ html {
   
 .content {
     margin-top: 100px;
-    height: 500px;
-    width: 700px;
+    height: auto;
+    width: 70%;
     border: 1px solid gray;
     border-radius: 16px;
     display: flex;
@@ -42,10 +51,11 @@ button {
     background: none;
     border: 1px solid #ffcf40;
     border-radius: 12px;
-    font-size: 16px;
+    font-size: 14px;
     padding: 8px 10px;
     color: lightgoldenrodyellow;
     cursor: pointer;
+    margin-top: 10px;
 }
   
 button:hover {
@@ -65,7 +75,12 @@ h6 {
 
 p {
     font-size: 13px;
+    text-align: center;
     margin: 5px;
+}
+
+a {
+    color: #ffcf40;
 }
 
 .inputContainer {
