--- a/frontend/index.css
+++ b/frontend/index.css
@@ -36,9 +36,7 @@ html {
 .content {
     margin-top: 100px;
     height: auto;
-    width: 70%;
-    border: 1px solid gray;
-    border-radius: 16px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,6 +58,11 @@ button {
   
 button:hover {
     background-color: rgba(255,255,255,0.1);
+}
+
+input {
+    width: 30%;
+    text-align: center;
 }
 
 input::placeholder {
