--- a/frontend/index.css
+++ b/frontend/index.css
@@ -32,16 +32,21 @@ html {
 .stats {
     margin-top: 50%;
     margin-bottom: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 h6 {
-    font-size: 20px;
+    font-size: 25px;
     color: lightgoldenrodyellow;
     margin-bottom: 20px;
 }
 
 p {
-    font-size: 18px;
+    font-size: 22px;
     text-align: center;
     margin: 5px;
 }
